# suika_clone

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile.toml  README.md  Todo.md
.cargo/: config.toml
.github/workflows/: release-web.yaml  release.yaml
assets/ron/: index.list.ron  kao.game.ron  kao.ron  kao_s.game.ron  kao_s.ron  list.ron
font_viewer/: .gitignore  Cargo.toml  Makefile.toml
font_viewer/.cargo/: config.toml
font_viewer/src/: main.rs
game_ron/: Cargo.toml
game_ron/src/: game_ron.rs  lib.rs
scale_ron/: Cargo.toml
scale_ron/src/: main.rs
src/: asset.rs  audios.rs  common.rs  debug.rs  game_assets.rs  game_ron.rs  game_screen.rs  loading_screen.rs  main.rs  physics_custom.rs  title_screen.rs
src/embedded_assets/: assets.rs
src/embedded_assets/ron/: kao.game.ron
src/game_screen/: common.rs  game_over_popup.rs  pause_popup.rs
src/title_screen/: common.rs  config_popup.rs  list_ron.rs
suika_clone/: .gitignore  Cargo.toml  Makefile.toml
suika_clone/.cargo/: config.toml
suika_clone/assets/ron/: iig.game.ron  index.list.ron  kao.game.ron  kao_s.game.ron
suika_clone/scripts/: hash.sh
suika_clone/src/: common.rs  debug.rs  game_assets.rs  game_ron.rs  game_ron_loadable.rs  game_screen.rs  loading_screen.rs  main.rs  physics_custom.rs  resource_loader.rs  title_screen.rs  wasm.rs
suika_clone/src/embedded_assets/: assets.rs
suika_clone/src/embedded_assets/ron/: kao.game.ron
suika_clone/src/game_screen/: camera.rs  common.rs  effects.rs  game_over_popup.rs  pause_popup.rs
suika_clone/src/title_screen/: config_popup.rs  licenses.yml  list_ron.rs
suika_clone/web-src/: index.html  index_2.html
