[package]
name = "suika_clone"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.13", features = [] }

bevy_xpbd_2d = "0.4" # Physics engine

#bevy_hanabi = "0.10" # Particle system
#noise = "0.8"

auto_ops = "0.3" # for generate operator overloading
rand_core = "0.6"
bevy_rand = "0.5"
bevy_prng = { version = "0.5", features = ["rand_chacha"] }

bevy-debug-text-overlay = "8.1"
bevy_console = "0.11"
clap = "4.5.4"


itertools = "0.12" # TODO: Shold find a suitable version of the library for our purpose and for other library dependencies.

######## WORKAROUND @2023/11/15 A: WSL->Windows Cross-Compilation Failed
## see: https://github.com/bevyengine/bevy/issues/10425
[dependencies.blake3]
version = "1.5"
features = ["pure"]
######## WORKAROUND @2023/11/15 A
