[workspace]
members = [
    "font_viewer",
    "game_ron", "scale_ron",
    "suika_clone",
]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[workspace.dependencies]
bevy = { version = "0.13", features = [] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }

