[package]
name = "suika_clone"
version = "0.1.0"
edition = "2021"
authors = ["MORI, Yuji <ashiojin@gmail.com>"]
license = "MIT"

[dependencies]
bevy = { version = "0.13", features = [] }

##### Custom Asset Reader
bevy_asset = { version = "0.13", features = [] }
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = ["Request", "Window", "Response"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

futures-lite = "2.0.1"
##### Custom Asset Reader


bevy_common_assets = { version = "0.10", features = ["ron"] }

bevy_xpbd_2d = "0.4" # Physics engine

egui = "0.13"
bevy_egui = "0.25" # bevy_console depend on 0.25
bevy-egui-kbgp = "0.17" # Keyboard/Gamepad support for bevy_egui

bevy_pkv = "0.10"

#bevy_hanabi = "0.10" # Particle system
#noise = "0.8"

auto_ops = "0.3" # for generate operator overloading
rand_core = "0.6"
bevy_rand = "0.5"
bevy_prng = { version = "0.5", features = ["rand_chacha"] }

bevy-debug-text-overlay = "8.1"
bevy_console = "0.11"
clap = "4.5.4"

ron = "0.8"
serde = { version = "1", features = ["derive"] }

itertools = "0.12" # TODO: Shold find a suitable version of the library for our purpose and for other library dependencies.

const_format = "0.2"
semver = "1.0.23"

######## WORKAROUND @2023/11/15 A: WSL->Windows Cross-Compilation Failed
## see: https://github.com/bevyengine/bevy/issues/10425
[dependencies.blake3]
version = "1.5"
features = ["pure"]
######## WORKAROUND @2023/11/15 A
